k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abu-marketplace-service
spec:
  type: ClusterIP
  selector:
    app: abu-marketplace
  ports:
    - name: http
      port: 3000
      targetPort: 3000
